--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,22 @@
 <resources>
     <string name="app_name">Bookitlist</string>
+    <string name="live_for_adventure">Live for Adventure</string>
+    <string name="create_your_bookitlist">Create your Bookitlist</string>
+    <string name="sign_in">Sign In</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="username">Username</string>
+    <string name="email">Email</string>
+    <string name="phone_number">+44 796234567</string>
+    <string name="password">Password</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="terms_and_conditions">Terms &amp; Conditions</string>
+    <string name="already_have_an_account">Already have an account? </string>
+    <string name="hint_full_name">Full Name</string>
+    <string name="prompt_dont_have_account">Don't have an account? </string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="sign_in_with_google">Sign in with Google</string>
+    <string name="sign_in_with_facebook">Sign in with Facebook</string>
+    <string name="sign_in_with_apple">Sign in with Apple</string>
+
+
 </resources>
