refactor: Update UI elements and theme
This commit introduces several UI refinements and theme adjustments:

- **Theme Update:** The base application theme `Theme.Bookitlist` now inherits from `Theme.MaterialComponents.DayNight.NoActionBar`, removing the default action bar.
- **Font Correction:** Corrected `app:fontFamily` to `android:fontFamily` in `App.Widget.Button.Roboto` style for proper font application.
- **Cross Icon:** Replaced `cross_icon.svg` with an equivalent Android Vector Drawable `cross_icon.xml`.
- **EditText Background:** Changed the background color of `edit_text_bg.xml` from `@color/edit_text_background_color_signup` to `@color/black`.
- **String Resource:** Escaped the apostrophe in the string `prompt_dont_have_account` in `strings.xml`.
- **WelcomeActivity:** Initialized `WelcomeActivity` by setting its content view to `R.layout.activity_welcome` in `onCreate`.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="terms_and_conditions">Terms &amp; Conditions</string>
     <string name="already_have_an_account">Already have an account? </string>
     <string name="hint_full_name">Full Name</string>
-    <string name="prompt_dont_have_account">Don't have an account? </string>
+    <string name="prompt_dont_have_account">Don\'t have an account? </string>
     <string name="forgot_password">Forgot Password?</string>
     <string name="sign_in_with_google">Sign in with Google</string>
     <string name="sign_in_with_facebook">Sign in with Facebook</string>
