refactor: Update UI and styles for Sign In and Sign Up screens
This commit introduces UI adjustments and style updates to the Sign In and Sign Up screens, primarily focusing on the phone number input field and overall layout spacing.

Key changes:

**Layouts:**
- **`app/src/main/res/layout/activity_welcome.xml`:**
    - Increased `marginTop` for `logoImageView` from `26dp` to `60dp`.
- **`app/src/main/res/layout/signup_activity.xml`:**
    - Increased `marginTop` for `logo` from `60dp` to `70dp`.
    - Adjusted `marginTop` for `fullNameEditText` (removed `marginBottom`), `usernameEditText`, `emailEditText`, `passwordEditText`, and `confirmPasswordEditText` to use `16dp` consistently.
    - Replaced the single `EditText` for phone number with a `LinearLayout (phoneNumberLayout)` containing a `TextView (countryCodePrefixTextView)` for the country code ("+91") and an `EditText (phoneNumberEditText)` for the number itself. This `LinearLayout` uses the new `CommonPhoneEditTextStyle`.
    - Set a fixed `layout_height` of `52dp` for `signUpButton`.
- **`app/src/main/res/layout/signin_activity.xml`:**
    - Increased `marginTop` for `logo` from `60dp` to `70dp`.
    - Replaced the single `EditText` for phone number with a `LinearLayout (phoneNumberLayout)` similar to the Sign Up screen, using `CommonPhoneEditTextStyle` and including a country code prefix.
    - Adjusted `marginTop` for `passwordEditText` to `16dp`.
    - Set a fixed `layout_height` of `52dp` for `signInButton`.
    - Increased `marginTop` for the "Don't have an account?" text container from `24dp` to `60dp`.

**Activities:**
- **`app/src/main/java/com/app/bookitlist/SignUpActivity.kt`:**
    - Updated `phoneEditText` to reference `binding.phoneNumberEditText` instead of the previous `binding.phoneEditText` due to the layout change.

**Resources:**
- **`app/src/main/res/values/themes.xml`:**
    - Added a new style `CommonPhoneEditTextStyle` which defines margins, background (`@drawable/edit_text_bg`), and h

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="sign_up">Sign Up</string>
     <string name="username">Username</string>
     <string name="email">Email</string>
-    <string name="phone_number">+44 796234567</string>
+    <string name="phone_number">Phone Number</string>
     <string name="password">Password</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="terms_and_conditions">Terms &amp; Conditions</string>
@@ -17,6 +17,8 @@
     <string name="sign_in_with_google">Sign in with Google</string>
     <string name="sign_in_with_facebook">Sign in with Facebook</string>
     <string name="sign_in_with_apple">Sign in with Apple</string>
+    <string name="phone_your_number_hint">Your number</string>
+    <string name="_91">+91</string>
 
 
 </resources>
