feat: Implement input validation for Sign Up and Sign In screens and update launcher icons
This commit introduces input validation for the Sign Up and Sign In screens and updates the application's launcher icons.

**Key Changes:**

**1. Sign Up Screen (`SignUpActivity.kt`):**
    - Added click listener to the "Sign Up" button.
    - Implemented validation for all input fields (Full Name, Username, Email, Phone Number, Password, Confirm Password).
    - Displays `Toast` messages for empty fields or if passwords do not match.
    - If validation passes, it currently navigates to `SignInActivity` (placeholder for actual sign-up logic).
    - New string resources for error messages added to `app/src/main/res/values/strings.xml`:
        - `err_msg_enter_full_name`
        - `err_msg_enter_username`
        - `err_msg_enter_email`
        - `err_msg_enter_phone_number` (also used in Sign In)
        - `err_msg_enter_password` (also used in Sign In)
        - `err_msg_confirm_password`
        - `err_msg_password_mismatch`

**2. Sign In Screen (`SignInActivity.kt`):**
    - Updated the click listener for the "Sign In" button.
    - Implemented validation for Phone Number and Password fields.
    - Uses a `showToast` extension function (presumably defined elsewhere) to display error messages for empty fields.
    - If validation passes, it proceeds to call `signInViewModel.signIn(loginRequest)`.

**3. Launcher Icons:**
    - Replaced existing `.webp` launcher icons with `.png` versions across all density buckets (`mipmap-mdpi`, `mipmap-hdpi`, `mipmap-xhdpi`, `mipmap-xxhdpi`, `mipmap-xxxhdpi`).
        - New files: `ic_launcher.png`, `ic_launcher_background.png`, `ic_launcher_foreground.png`, `ic_launcher_monochrome.png`.
        - Deleted files: `ic_launcher.webp`, `ic_launcher_round.webp`.
    - Deleted `app/src/main/res/mipmap-anydpi-v26/ic_launcher_round.xml`.
    - Updated `app/src/main/res/mipmap-anydpi-v26/ic_launcher.xml` to reference the new `mipmap` drawables for 

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,13 @@
     <string name="sign_in_with_apple">Sign in with Apple</string>
     <string name="phone_your_number_hint">Your number</string>
     <string name="_91">+91</string>
+    <string name="err_msg_enter_phone_number">Please enter your phone number</string>
+    <string name="err_msg_enter_password">Please enter your password</string>
+    <string name="err_msg_enter_full_name">Please enter your full name</string>
+    <string name="err_msg_enter_username">Please enter your username</string>
+    <string name="err_msg_enter_email">Please enter your email</string>
+    <string name="err_msg_confirm_password">Please confirm your password</string>
+    <string name="err_msg_password_mismatch">Passwords do not match</string>
 
 
 </resources>
